Fix contrast problems

--- a/style.scss
+++ b/style.scss
@@ -120,8 +120,8 @@ form {
     @media screen and (min-width: 450px) {
       grid-column: 6 / -1;
     }
-    font-size: 13px;
-    color: red;
+    font-size: 16px;
+    color: #d32f2f;
     transform: translateY(-6px);
   }
 }
@@ -227,14 +227,14 @@ form {
 
   button[type='submit'] {
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 18px;
     @media screen and (max-width: 450px) {
       margin-left: 1rem;
     }
-    padding: 6px;
+    padding: 0.5rem;
     align-self: center;
-    background-color: #4299e1;
-    border: 1px solid #2b6cb0;
+    background-color: #23669a;
+    box-shadow: 3px 3px 6px 2px #00000048;
     color: white;
     @media screen and (min-width: 450px) {
       grid-column: 6 / span 2;
@@ -252,7 +252,7 @@ footer {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  height: var(--footer-height);
+  height: 5rem;
   font-size: 0.8rem;
   p {
     margin: 3px;
